# btcusdt-15m-research

./: README.md  pyproject.toml
btcusdt-15m-factor-research/: requirements.txt
btcusdt-15m-factor-research/config/: project_config.example.json
btcusdt-15m-factor-research/results/: model_compare_summary.csv
btcusdt-15m-factor-research/scripts/: build_research_dataset.py  fetch_binance_futures_data.py  run_final_two_factor_model.py
btcusdt-15m-factor-research/src/3model/: __init__.py  config.py  data_pipeline.py  evaluation.py  models.py
btcusdt-15m-factor-research/src/btcusdt_15m_factor_research/: feature_engineering.py
results/: factor_decay.csv  final_summary.json
scripts/: run_three_model.py  single_factor_research.py  three_model_results.py  validate_candidate_models.py
src/3model/: plot_results.py  train_compare.py  utils.py
src/btcusdt_15m_factor_research/: __init__.py  backtest_utils.py  data_pipeline.py  research_utils.py
