[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btcusdt-15m-factor-research"
version = "0.2.0"
description = "BTCUSDT 15m factor research project with factor selection and three-model comparison."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "requests>=2.31",
  "pyarrow>=14.0",
  "scikit-learn>=1.2",
  "xgboost>=1.7",
  "lightgbm>=4.0",
  "torch>=2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
